# desk-square

./: .dockerignore  .env.dev  .env.dev.example  .gitignore  Makefile  README.md  desk.md  docker-compose.yml  dockerfile  entrypoint.sh  pyproject.toml  pytest.ini  setup.cfg  wait-for-postgres.sh
.github/workflows/: ci.yml
accounts/: backends.py  enums.py  managers.py  models.py  serializers.py  tasks.py  tokens.py  urls.py  utils.py  views.py
accounts/migrations/: 0001_initial.py  0002_user_blog_user_company_user_country_user_job_title_and_more.py  0002_user_delete_customuser.py  0003_alter_user_options_alter_user_managers_and_more.py  0003_user_email_verified_at_user_is_email_verified_and_more.py  0004_alter_user_email.py  0004_remove_user_phone_user_phone_number.py  0005_alter_user_first_name_alter_user_last_name.py  0005_alter_user_phone_number.py  0006_alter_user_managers.py  0007_alter_user_country.py  0007_user_is_staff.py
accounts/tests/: factories.py  test_models.py  test_users.py  test_views.py
apps/accounts/: backends.py  serializers.py  tasks.py  urls.py  utils.py  views.py
apps/events/: apps.py  models.py  serializers.py  views.py
commons/: apps.py  managers.py  models.py
config/: celery.py  settings.py  tasks.py  urls.py
events/: enums.py  models.py  serializers.py  urls.py  views.py
events/migrations/: 0001_initial.py  0002_category_delete_tickets_and_more.py  0003_event_image_location_ticket_time_type_video_and_more.py  0005_tag_remove_etype_event_remove_location_event_and_more.py  0006_alter_event_summary_alter_event_url.py  0007_remove_event_loc_type_remove_event_location_and_more.py  0008_location_country_alter_ticket_event.py  0009_media_remove_video_event_alter_location_event_and_more.py  0010_alter_location_event.py  0012_alter_tag_name.py  0013_attendee_rename_quantity_ticket_quantity_available_and_more.py  0014_remove_ticket_tickets_per_order_and_more.py  0015_attendee_email_attendee_guest_attendee_name_and_more.py  0016_remove_attendee_user_register_event_once_and_more.py  0017_alter_attendee_name.py  0018_alter_ticketorder_user.py  0019_alter_ticketorder_tickets_purchased_and_more.py
events/tests/: test_models.py
pg-scripts/: citext.sh
(+22 files in other folders)
