[tool.poetry]
name = "desk-square"
version = "0.1.0"
description = "API for an event management tool (ex. Meetup and EvenBrite) written in drf django."
authors = ["Temiloluwa Samuel <65780579+stemitom@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
