[tool.poetry]
name = "desk-square"
version = "0.1.0"
description = "API for an event management tool (ex. Meetup and EventBrite) written in drf django."
authors = ["Temiloluwa Samuel <65780579+stemitom@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9.12"
djangorestframework = "^3.13.1"
djangorestframework-simplejwt = "^5.1.0"
setuptools = "^62.3.2"
six = "^1.16.0"
django-shell-plus = "^1.1.7"
decouple = "^0.0.7"
django-environ = "^0.8.1"
psycopg2 = "^2.9.3"
django-countries = "^7.3.2"
django-timezone-field = "^5.0"
tzdata = "^2022.1"
celery = "^5.2.7"
factory-boy = "^3.2.1"
django-coverage-plugin = "^2.0.3"
pytest-django = "^4.5.2"
coverage = "^6.4.4"
platformdirs = "^2.5.2"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}
isort = "^5.10.1"
flake8 = "^4.0.1"
coverage = "^6.3.2"
mypy = "^0.961"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
